[gd_scene load_steps=2 format=3 uid="uid://b80f333yu074o"]

[ext_resource type="Script" uid="uid://dgpnrsd5fsvsw" path="res://assets/scripts/ui/main_menu.gd" id="1_l6cm7"]

[node name="MainMenu" type="Node"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Tittle" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
grow_horizontal = 2
grow_vertical = 2
text = "Awesome Game!"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -68.0
offset_right = 160.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="SteamButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Steam Lobby"

[node name="WebRTCButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "WebRTC Lobby"

[node name="SettingsButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="Author" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = -106.0
offset_top = -11.5
offset_right = 106.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "by Mapagmataas (ma.cyou)"
horizontal_alignment = 1
vertical_alignment = 2
